; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_fstab.c_getfsent.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_fstab.c_getfsent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fstab = type { i32 }

@_fs_fp = common dso_local global i32 0, align 4
@_fs_fstab = common dso_local global %struct.fstab zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.fstab* @getfsent() #0 {
  %1 = alloca %struct.fstab*, align 8
  %2 = load i32, i32* @_fs_fp, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = call i32 (...) @setfsent()
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %4, %0
  %8 = call i32 (...) @fstabscan()
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %7, %4
  store %struct.fstab* null, %struct.fstab** %1, align 8
  br label %12

11:                                               ; preds = %7
  store %struct.fstab* @_fs_fstab, %struct.fstab** %1, align 8
  br label %12

12:                                               ; preds = %11, %10
  %13 = load %struct.fstab*, %struct.fstab** %1, align 8
  ret %struct.fstab* %13
}

declare dso_local i32 @setfsent(...) #1

declare dso_local i32 @fstabscan(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
